<resources>
    <string name="app_name">GreenForce</string>
    <string name="app_uuid">a3d56928-fe48-4ad7-83d4-bf0d72ec9538</string>
    <string name="login_page_header">
        Saw garbage?\nTake a photo.Invite friends.\nClean together and earn points.
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerText">Don\'t have an account?</string>
    <string name="logintext">LOGIN</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="alertDialog">Reset password</string>
    <string name="recoverPassword">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="emailSent">Email sent</string>
    <string name="emailFailed">Failed</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="upload">Upload</string>
    <string name="registrationCompleted">Registration success</string>
    <string name="registrationFailed">Registration failed</string>
    <string name="homepage_text">GreenForce</string>
    <string name="profile_card_text">Profile</string>
    <string name="events_text">Events</string>
    <string name="add_text">Add</string>
    <string name="friends_text">Friends</string>
    <string name="rank_text">Rank</string>
    <string name="EditProfile">Edit</string>
    <string name="my_profile">Account</string>
    <string name="edit">Edit</string>
    <string name="bluetooth">Bluetooth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="points_text">Points</string>
    <string name="phone_number">Phone Number</string>
    <string name="tasks">Tasks</string>
    <string name="name">Name</string>
    <string name="surname">Surame</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_my_friends">MyFriendsActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_add_friends_via_bluetooth">AddFriendsViaBluetoothActivity</string>
    <string name="loading">Loading…</string>
    <string name="radius">Radius:</string>
    <string name="maps">Maps</string>
    <string name="maps_api_key">AIzaSyCOndUlXir9aIy6EHnEhdfnVWUAUqfjciY</string>
    <string name="username">Username</string>
    <string name="all_users">All users</string>
    <string name="me">Me</string>
    <string name="sendFriendRequest">Send request</string>
    <string name="view">View</string>
    <string name="remove">Remove</string>
    <string name="pending">Pending</string>
    <string name="friend_request">Friend request</string>
    <string name="friend_req_text">would like to add you as a friend</string>
    <string name="notifications">Notifications</string>
    <string name="rankings">Rankings</string>
    <string name="refresh">Refresh</string>

    <string-array name="spinner_data">
        <item>Me</item>
        <item>All users</item>
    </string-array>
    <string name="title_activity_events">EventsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="event_info">Info</string>
    <string name="event_photos">Photos</string>
    <string name="event_volunteers">Volunteers</string>
    <string name="posted_by">Posted by :</string>
    <string name="status">Status</string>
    <string name="event_type">Type:</string>
    <string name="event_description">Description:</string>
    <string name="event">Event</string>
    <string name="about_categories">
        Land pollution - Garbage is at inappropriate place somewhere in nature.\n<br /><br />
        Water pollution - Garbage is in the river,lake or other water areas.\n<br /><br />
        Reforestation - Forest was either burnt down by wildfire(or on purpose) or trees were cut down.\n<br /><br />
        Others - An event that doesn\'t belong in any of above named categories.
    </string>
    <string name="about_events">
<!--        Every event has certain amount of points that you will-->
<!--        collect once you complete it. You can invite friends to help you-->
<!--        which will bring you additional points.<br /><br />-->
<!--        Duration of each event is 2 weeks. If you don\'t finish it in-->
<!--        that period, you won\'t get any points and your post will be removed.<br />-->
<!--        Event can be abandoned. In that case you will lose 30 points. If you were leader, new-->
<!--        one will become volunteer with maximum points.-->
    </string>
    <string name="upload_photo">Upload photo</string>
    <string name="select_categories">Select categories:</string>
    <string name="land_pollution_50pts">Land pollution - 50pts</string>
    <string name="water_pollution_100pts">Water pollution - 100pts</string>
    <string name="reforestation_200pts">Reforestation - 200pts</string>
    <string name="other_30pts">Other - 30pts</string>
    <string name="points">Points:</string>
    <string name="location">Location</string>
    <string name="description">Description:</string>
    <string name="event_about">About</string>
    <string name="mark_a_spot">Mark a spot</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="all_photos">All photos</string>
    <string name="title_activity_events_map">EventsMapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="events">Events</string>
    <string name="filters">Filters</string>
    <string name="clear_all">Clear all</string>
    <string name="posted_by_filters">Posted by</string>
    <string name="points_range">Points range :</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="city">City :</string>
    <string name="types">Types :</string>
    <string name="water_pollution">Water pollution</string>
    <string name="land_pollution">Land pollution</string>
    <string name="reforestation">Reforestation</string>
    <string name="other">Other</string>
    <string name="apply">Apply</string>
    <string name="date_amp_time"><![CDATA[Date & time]]></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="alreadyLeader">Already Leader</string>
    <string name="volunteer">Volunteer</string>
    <string name="sent">Sent</string>
    <string name="title_activity_current_events">CurrentEventsActivity</string>
    <string name="leader">Leader</string>
    <string name="currentEvents">Current events</string>
    <string name="submit">Submit</string>
    <string name="event_request">Event Request</string>
    <string name="services">Services</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="review">Review</string>
    <string name="completed_events">Completed events</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>


</resources>
