<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_container_events_filter"
    android:background="@drawable/bottom_sheet_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/filters"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/clear_all"
            android:layout_toLeftOf="@id/clear_all_filters_image"
            android:id="@+id/clear_all_filters"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"/>

       <ImageView
           android:layout_width="wrap_content"
           android:padding="15dp"
           android:id="@+id/clear_all_filters_image"
           android:src="@drawable/clear_filters_icon"
           android:layout_alignParentRight="true"

           android:layout_height="wrap_content"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/greyColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/posted_by"
            android:layout_toLeftOf="@id/clear_all_filters_image"
            android:textColor="@color/greyColor"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/event_filters_posted_by"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/greyColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/points_range"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:textColor="@color/greyColor"
            android:textSize="18sp"
            android:text="@string/from"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_marginRight="8dp"
            android:id="@+id/events_filter_from"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:padding="15dp"
            android:textColor="@color/greyColor"
            android:textSize="18sp"
            android:text="@string/to"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_marginRight="8dp"
            android:id="@+id/events_filter_to"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/greyColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/city"
            android:layout_toLeftOf="@id/clear_all_filters_image"
            android:textColor="@color/greyColor"
            android:textSize="18sp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_marginRight="8dp"
            android:id="@+id/events_filter_city"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/greyColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:padding="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/types"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/filters_checkbox_water_pollution"
            android:text="@string/water_pollution"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/filters_checkbox_water_pollution"
            android:id="@+id/filters_checkbox_land_pollution"
            android:text="@string/reforestation"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/filters_checkbox_reforestation"
            android:text="@string/land_pollution"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/filters_checkbox_other"
            android:text="@string/other"
            android:layout_toRightOf="@id/filters_checkbox_reforestation"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/greyColor"/>
    <Button
        android:id="@+id/event_filters_apply"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:background="@drawable/round_button_red"
        android:layout_gravity="center"/>

</LinearLayout>