<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenText"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/events_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:id="@+id/tabLayout"
            app:tabTextColor="@color/colorWhite"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:id="@+id/tabItemInfo"
                android:layout_height="wrap_content"
                android:text="@string/event_info" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:id="@+id/tabItemPhotos"
                android:layout_height="wrap_content"
                android:text="@string/event_photos" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tabItemVolunteers"
                android:text="@string/event_volunteers" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ViewFlipper
        android:layout_width="match_parent"
        android:id="@+id/view_flipper"
        android:layout_height="wrap_content">

        <include layout="@layout/event_info_layout"/>
        <include layout="@layout/event_photos_layout"/>
        <include layout="@layout/event_volunteers_layout"/>

    </ViewFlipper>


</LinearLayout>