<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/greenText"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/rankings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.1"
        android:layout_marginRight="10dp"
        android:layout_height="0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.65"
            android:text="@string/all_photos"
            android:gravity="center"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="0.35"
            android:text="@string/add_a_photo"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:id="@+id/mark_a_spot_photos_recycler"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:gravity="center"
        android:layout_height="0dp">
        <Button
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            />

        <Button
            android:text="Finish"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </LinearLayout>

</LinearLayout>